--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
 
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.4.0'
+    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.6.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
+    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.6.2'
 
     configurations.compile.extendsFrom(configurations.extraLibs)
 }
@@ -78,4 +81,8 @@ publishing {
             }
         }
     }
+}
+
+test {
+    useJUnitPlatform()
 }
