--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ configurations {
 }
 
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20180130'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
 
